--- a/Lesson_17/Views/Product/GetAllProduct.cshtml
+++ b/Lesson_17/Views/Product/GetAllProduct.cshtml
@@ -43,9 +43,8 @@
                 @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
-                    @Html.ActionLink("Edit", "ReplaceProduct", new { /* id=item.PrimaryKey */ }) |
-               @* @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
-                    @Html.ActionLink("Delete", "DeleteProduct", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "ReplaceProduct",new {item.Id}) |
+                    @Html.ActionLink("Delete", "DeleteProduct", new {item.Id})
             </td>
         </tr>
 }
